# opcua-modeling-tutorial-server

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c
.github/workflows/: main.yml
tools/: install_open62541.sh
